1. Remove `whaaaaat` dependency due to out of date and migrate to `inquirer`. 2.Debug enable data augmentation? No 3. Fix typo and minor refactor

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
   pytablewriter==0.47.0
   PyYAML==4.2b4
   tensorflow-datasets==1.0.2
-  whaaaaat==0.5.2
+  inquirer==2.6.3
   cython==0.27.3
 
 [options.extras_require]
