--- a/.buildkite/lmnet-pipeline.yml
+++ b/.buildkite/lmnet-pipeline.yml
@@ -1,4 +1,25 @@
 steps:
+  - command: "make build"
+    label: "docker build in GPU agent"
+    agents:
+    - "agent-type=gpu"
+    - "env=production"
+    timeout_in_minutes: "30"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
+    concurrency: 1
+    concurrency_group: "docker/gpu/${BUILDKITE_COMMIT}"
+  - command: "make build"
+    label: "docker build in normal agent"
+    agents:
+    - "agent-type=normal"
+    - "env=production"
+    timeout_in_minutes: "30"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
+    concurrency: 1
+    concurrency_group: "docker/normal/${BUILDKITE_COMMIT}"
+  - wait
   - command: "make test-unit-main"
     label: "main"
     agents:
