--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -1,4 +1,15 @@
 steps:
+  - command: "make build"
+    label: "docker build in GPU agent"
+    agents:
+    - "agent-type=gpu"
+    - "env=production"
+    timeout_in_minutes: "30"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
+    concurrency: 1
+    concurrency_group: "docker/gpu/${BUILDKITE_COMMIT}"
+  - wait
   - command: "make test-classification"
     label: "classification"
     agents:
