--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -91,13 +91,13 @@ steps:
       BUILDKITE_CLEAN_CHECKOUT: 'true'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
-      pip install -r output_template/python/requirements.txt --no-cache-dir
+      sudo pip install -r output_template/python/requirements.txt --no-cache-dir
       export CWD=\$(pwd)
       for TEST_CASE in \$(ls tmp/)
       do
         echo \${TEST_CASE}
         cd tmp/\${TEST_CASE}/export/*/*/output/python
-        python run.py -i ../../inference_test_data/raw_image.png -c ../models/meta.yaml -m ../models/lib/libdlk_arm.so
+        sudo python run.py -i ../../inference_test_data/raw_image.png -c ../models/meta.yaml -m ../models/lib/libdlk_arm.so
         cd \${CWD}
       done
     label: "inference on de10nano(arm)"
