--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -68,7 +68,28 @@ steps:
     - "tmp/*/export/*/*/inference_test_data/raw_image.png"
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
-      pip3 install -r output_template/python/requirements.txt
+      export CWD=\$(pwd)
+      for TEST_CASE in \$(ls tmp/)
+      do
+        echo \${TEST_CASE}
+        cd tmp/\${TEST_CASE}/export/*/*/output/python
+        python3 run.py -i ../../inference_test_data/raw_image.png -c ../models/meta.yaml -m ../models/lib/libdlk_x86.so
+        cd \${CWD}
+      done
+    label: "inference on ubuntu(x86)"
+    depends_on:
+    - "classification"
+    - "object-detection"
+    - "semantic-segmentation"
+    - "keypoint-detection"
+    agents:
+    - "agent-type=normal"
+    - "env=production"
+    timeout_in_minutes: "30"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
+  - command: |
+      buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
       export CWD=\$(pwd)
       for TEST_CASE in \$(ls tmp/)
       do
@@ -91,7 +112,6 @@ steps:
       BUILDKITE_CLEAN_CHECKOUT: 'true'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
-      sudo pip install -r output_template/python/requirements.txt --no-cache-dir
       export CWD=\$(pwd)
       for TEST_CASE in \$(ls tmp/)
       do
