--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -81,6 +81,22 @@ steps:
       DEVICE_TEST_LIB_NAME: 'libdlk_x86.so'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
+      python3 -m venv blueoil_inference
+      source blueoil_inference/bin/activate
+      pip3 install -U pip
+      pip3 install -r output_template/python/requirements.txt
+      python3 tests/device_tests/test_device_e2e.py
+    label: "inference on ubuntu(x86_avx)"
+    agents:
+    - "agent-type=normal"
+    - "env=production"
+    timeout_in_minutes: "30"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
+      DEVICE_TEST_INPUT_PATH: './tmp'
+      DEVICE_TEST_LIB_NAME: 'libdlk_x86_avx.so'
+  - command: |
+      buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
       pip3 install -r output_template/python/requirements.txt
       python3 tests/device_tests/test_device_e2e.py
     label: "inference on raspberry-pi(aarch64)"
