Switch main test DE10-Nano OS to bionic

--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -116,6 +116,7 @@ steps:
     agents:
     - "agent-type=de10nano"
     - "env=benchmark"
+    - "os=bionic"
     timeout_in_minutes: "30"
     env:
       BUILDKITE_CLEAN_CHECKOUT: 'true'
