--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -110,8 +110,8 @@ steps:
       DEVICE_TEST_LIB_NAME: 'libdlk_aarch64.so'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
-      sudo pip install -r output_template/python/requirements.txt --no-cache-dir
-      cd tests/device_tests && python test_device_e2e.py
+      sudo pip3 install -r output_template/python/requirements.txt --no-cache-dir
+      cd tests/device_tests && python3 test_device_e2e.py
     label: "inference on de10nano(arm)"
     agents:
     - "agent-type=de10nano"
