--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -68,6 +68,7 @@ steps:
       python3 -m venv blueoil_inference
       source blueoil_inference/bin/activate
       pip3 install -U pip
+      pip3 uninstall enum34
       pip3 install -r output_template/python/requirements.txt
       cd tests/device_tests && python3 test_device_e2e.py
     label: "inference on ubuntu(x86)"
@@ -84,6 +85,7 @@ steps:
       python3 -m venv blueoil_inference
       source blueoil_inference/bin/activate
       pip3 install -U pip
+      pip3 uninstall enum34
       pip3 install -r output_template/python/requirements.txt
       cd tests/device_tests && python3 test_device_e2e.py
     label: "inference on ubuntu(x86_avx)"
@@ -97,6 +99,7 @@ steps:
       DEVICE_TEST_LIB_NAME: 'libdlk_x86_avx.so'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
+      pip3 uninstall enum34
       pip3 install -r output_template/python/requirements.txt
       cd tests/device_tests && python3 test_device_e2e.py
     label: "inference on raspberry-pi(aarch64)"
@@ -110,6 +113,7 @@ steps:
       DEVICE_TEST_LIB_NAME: 'libdlk_aarch64.so'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
+      sudo pip3 uninstall enum34
       sudo pip3 install -r output_template/python/requirements.txt --no-cache-dir
       cd tests/device_tests && python3 test_device_e2e.py
     label: "inference on de10nano(arm)"
