Fix rasberry-pi pipeline

--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -103,6 +103,7 @@ steps:
       DEVICE_TEST_LIB_NAME: 'libdlk_x86_avx.so'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
+      pip3 install -U pip
       pip3 uninstall -y enum34
       pip3 install -r output_template/python/requirements.txt
       cd tests/device_tests && python3 test_device_e2e.py
@@ -117,6 +118,7 @@ steps:
       DEVICE_TEST_LIB_NAME: 'libdlk_aarch64.so'
   - command: |
       buildkite-agent artifact download "tmp/*" ./ --build \${BUILDKITE_BUILD_ID}
+      sudo pip3 install -U pip
       sudo pip3 uninstall -y enum34
       sudo pip3 install -r output_template/python/requirements.txt --no-cache-dir
       cd tests/device_tests && python3 test_device_e2e.py
