CI: Add mypy test

--- a/.buildkite/lmnet-pipeline.yml
+++ b/.buildkite/lmnet-pipeline.yml
@@ -36,3 +36,12 @@ steps:
     timeout_in_minutes: "30"
     env:
       BUILDKITE_CLEAN_CHECKOUT: 'true'
+  - command: "make test-blueoil-mypy"
+    label: "mypy"
+    agents:
+    - "agent-type=normal"
+    - "env=production"
+    timeout_in_minutes: "5"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
+    soft_fail: true
