--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ docs =
   sphinx-autobuild==0.7.1
 test =
   flake8==3.7.9
+  mypy==0.782
   pytest==5.3.5
   pytest-xdist==1.31.0
   parameterized==0.7.1
@@ -60,3 +61,6 @@ console_scripts =
 
 [flake8]
 max-line-length = 120
+
+[mypy]
+ignore_missing_imports = True
