--- a/output_template/python/requirements.txt
+++ b/output_template/python/requirements.txt
@@ -1,8 +1,6 @@
-click==7.0
-easydict==1.9
-numpy==1.18.1
+click==6.7
+easydict==1.6
+numpy==1.14.0
 Pillow==6.2.2
-PyYAML==5.3
-
-# for python2
-six==1.15.0
+PyYAML==4.2b4
+six==1.11.0
