--- a/docker/Dockerfile-inference
+++ b/docker/Dockerfile-inference
@@ -2,13 +2,14 @@ FROM ubuntu:18.04 AS base
 
 LABEL maintainer="admin@blueoil.org"
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install --no-install-recommends -y \
     locales\
     python3 \
     python3-pip \
     libjpeg8-dev \
     zlib1g-dev \
     libfreetype6-dev \
+    python3-opencv \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
@@ -24,12 +25,13 @@ RUN pip3 install -U pip setuptools
 
 FROM base AS blueoil-inference
 
+# Install packages
+COPY output_template/python/requirements.txt /home/blueoil/output_template/python/requirements.txt
+RUN pip install -r /home/blueoil/output_template/python/requirements.txt
+
 # Copy files for inference
 COPY blueoil /home/blueoil/blueoil
 COPY output_template /home/blueoil/output_template
-
-# Install packages
-RUN pip install -r /home/blueoil/output_template/python/requirements.txt
 
 WORKDIR /home/blueoil/output_template/python
 ENV PYTHONPATH=/home/blueoil/output_template/python
