Fix absl-py version to 0.8.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,10 @@ install_requires =
 
 [options.extras_require]
 cpu =
+  absl-py==0.8.1
   tensorflow==1.15.3
 gpu =
+  absl-py==0.8.1
   tensorflow-gpu==1.15.3
 dist =
   horovod==0.19.5
