--- a/setup.cfg
+++ b/setup.cfg
@@ -47,10 +47,10 @@ docs =
   Sphinx==2.4.4
   sphinx-autobuild==0.7.1
 test =
-  coverage==5.2.1
   flake8==3.7.9
   mypy==0.782
   pytest==5.3.5
+  pytest-cov==2.10.1
   pytest-xdist==1.31.0
   parameterized==0.7.1
 validate =
