Enable coverage report in unit tests (#1175)

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ test =
   flake8==3.7.9
   mypy==0.782
   pytest==5.3.5
+  pytest-cov==2.10.1
   pytest-xdist==1.31.0
   parameterized==0.7.1
 validate =
